--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 and you will probably end up dead within seconds after beginning this game.
 After you are assigned a character, you must make what you percieve as the safest choices for your character, 
 based on their age and daily routine.</h1>
-  <img src="Desktop/sketch 7/ben.gif">
+  <img src="Desktop/Sketch 7/Ben.gif">
 </body>
 </html>
 
