--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ and you will probably end up dead within seconds after beginning this game.
 After you are assigned a character, you must make what you percieve as the safest choices for your character, 
 based on their age and daily routine.</h1>
   <img src="/Sketch 7/Ben.gif">
+  <img src="/Sketch 7/Poison.gif">
+   <img src="/Sketch 7/Sink.gif">
+   <img src="/Sketch 7/Eliza.gif">
+   <img src="/Sketch 7/Sunset.gif">
+  
 </body>
 </html>
 
