--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ and you will probably end up dead within seconds after beginning this game.
 After you are assigned a character, you must make what you percieve as the safest choices for your character, 
 based on their age and daily routine. These gifs display our two characters Ben and Eliza, the beach where Ben lives, 
   the poison that kills Eliza, and the sink Eliza uses to try and brush her teeth.  </h1>
-  <img src="Sketch 7/Ben.gif">
-  <img src="Sketch 7/Poison.gif">
-   <img src="Sketch 7/Sink.gif">
-   <img src="Sketch 7/Eliza.gif">
-   <img src="Sketch 7/Sunset.gif">
+  <img src="Ben.gif">
+  <img src="Poison.gif">
+   <img src="Sink.gif">
+   <img src="Eliza.gif">
+   <img src="Sunset.gif">
   
 </body>
 </html>
