--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 <h1>The object of this game is to stay alive as long as possible. Unfortunately, today is not your lucky day, 
 and you will probably end up dead within seconds after beginning this game.
 After you are assigned a character, you must make what you percieve as the safest choices for your character, 
-based on their age and daily routine. These gifs display our two characters Ben and Eliza, the beach where Ben lives, 
-  the poison that kills Eliza, and the sink Eliza uses to try and brush her teeth.  </h1>
+based on their age and daily routine.   </h1>
+  
+  <h2>These gifs display our two characters Ben and Eliza</h2>
   <img src="Ben.gif">
+  <img src="Eliza.gif">
+  <h3>These gifs display the poison and sink Eliza uses to brush her teeth</h3>
   <img src="Poison.gif">
    <img src="Sink.gif">
-   <img src="Eliza.gif">
+  <h4>This gif displays the beach where Ben lives</h4>
    <img src="Sunset.gif">
   
 </body>
