--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@ and you will probably end up dead within seconds after beginning this game.
 After you are assigned a character, you must make what you percieve as the safest choices for your character, 
 based on their age and daily routine.   </h1>
   
-  <h2>These gifs display our two characters Ben and Eliza</h2>
+  <h2>These gifs display our two characters Ben and Eliza.</h2>
   <img src="Ben.gif">
   <img src="Eliza.gif">
   
-  <h3>These gifs display the poison and sink Eliza uses to brush her teeth</h3>
+  <h3>These gifs display the poison and sink Eliza uses to brush her teeth.</h3>
   <img src="Poison.gif">
    <img src="Sink.gif">
   
-  <h4>This gif displays the beach where Ben lives</h4>
+  <h4>This gif displays the beach where Ben lives.</h4>
    <img src="Sunset.gif">
   
 </body>
