--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ After you are assigned a character, you must make what you percieve as the safes
 based on their age and daily routine.   </h1>
   
   <h2>These gifs display our two characters Ben and Eliza.</h2>
-  <img src="Ben.gif">
-  <img src="Eliza.gif">
+  <img src="gifs/Ben.gif">
+  <img src="gifs/Eliza.gif">
   
   <h3>These gifs display the poison and sink Eliza uses to brush her teeth.</h3>
-  <img src="Poison.gif">
-   <img src="Sink.gif">
+  <img src="gifs/Poison.gif">
+   <img src="gifs/Sink.gif">
   
   <h4>This gif displays the beach where Ben lives.</h4>
-   <img src="Sunset.gif">
+   <img src="gifs/Sunset.gif">
   
 </body>
 </html>
